fix ownprofile groups-list spacing

--- a/client/styles/components/_detail-pages.scss
+++ b/client/styles/components/_detail-pages.scss
@@ -8,7 +8,7 @@
 		margin-bottom: $form-group-margin-bottom;
 		margin-top: 0;
 	}
-	& > .btn {
+	& > .btn:first-child {
 		width: 100%;
 	}
 	& > .frame-events {
